# Tenon-BlockChain

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_android_v8.sh  cmd.sh  deploy.sh  k.sh  kernel.sh  lego.sln  lego.vcxproj  lego.vcxproj.filters  perf.sh  status  tcmd.sh  tcp.sh  uuid  xcp.sh
data/default/: private_key_table  tenon_ck_account_key_value_table  tenon_ck_account_table  tenon_ck_block_table  tenon_ck_statistic_table  tenon_ck_transaction_table
metadata/: default  default.sql  system  system.sql
src/: 1  bft_manager.cc  gen_proto.sh
src/MyCom/: MyClass.cpp  MyClass.h  MyClass.rgs  MyCom.cpp  MyCom.def  MyCom.idl  MyCom.rgs  MyCom.vcxproj  MyCom.vcxproj.filters  MyCom_i.c  MyCom_i.h  MyCom_p.c  compreg.cpp  compreg.h  dlldata.c  dllmain.cpp  dllmain.h  resource.h  stdafx.cpp  stdafx.h
src/bft/: CMakeLists.txt  bft_interface.cc  bft_interface.h  bft_manager.cc  bft_manager.h  bft_utils.cc  bft_utils.h  dispatch_pool.cc  dispatch_pool.h  gid_manager.cc  gid_manager.h  member_manager.cc  member_manager.h  tx_bft.cc  tx_bft.h  tx_pool.cc  tx_pool.h  tx_pool_manager.cc  tx_pool_manager.h
src/bft/tests/: Ballot.sol  BlindAuction.sol  CMakeLists.txt  Purchase.sol  ReceivePays.sol  SimpleAuction.sol  SimplePaymentChannel.sol  ballot.js  blind_auction.js  purchase.js  simple_action.js  simple_payment_channel.js  test_bft_manager _for_fail_case.cc  test_bft_manager.cc  test_bft_manager_for_fail_case.cc  test_block_manager.cc  test_election.cc  test_http_post.py  test_member_manager.cc  test_more_leader_transaction.cc  test_more_node_election.cc  test_more_node_transaction.cc  test_random_transaction.cc  test_transactions_with_env.cc  test_transport.h
src/big_num/: CMakeLists.txt  bignum_utils.h  libsnark.cc  libsnark.h  snark.cc  snark.h
src/big_num/tests/: test_snark.cc
src/block/: CMakeLists.txt  account_manager-.cc  account_manager.cc  account_manager.h  block_manager.cc  block_manager.h  block_utils.h  db_account_info.cc  db_account_info.h  db_pool_info.cc  db_pool_info.h  shard_statistic.cc  shard_statistic.h
src/bls/: CMakeLists.txt  bls_dkg.cc  bls_dkg.h  bls_manager.cc  bls_manager.h  bls_sign.cc  bls_sign.h  bls_utils.h  dkg.cc  dkg.h
src/bls/proto/: bls.pb.cc  bls.pb.h  bls.proto
src/bls/tests/: CMakeLists.txt  test_bls.cc
src/broadcast/: CMakeLists.txt  broadcast.cc  broadcast.h  broadcast_utils.h  filter_broadcast.cc  filter_broadcast.h
src/ck/: CMakeLists.txt  ck_client.cc  ck_client.h  ck_utils.h
src/client/: CMakeLists.txt  client_dht.h  client_universal_dht.cc  client_universal_dht.h  client_utils.h  trans_client.cc  trans_client.h  vpn_client.cc  vpn_client.h
src/client/tests/: CMakeLists.txt  test_base_transaction.cc
src/common/: CMakeLists.txt  bitmap.cc  bitmap.h  bloom_filter.cc  bloom_filter.h  config.cc  config.h  country_code.h  db_key_prefix.h  encode.cc  encode.h  fts_tree.cc  fts_tree.h  global_info.cc  global_info.h  hash.cc  hash.h  header_type.cc  header_type.h  limit_hash_map.h  limit_hash_set.h  limit_heap.cc  limit_heap.h  lof.cc  lof.h  log.h  messge_window.h  min_heap.cc  min_heap.h  parse_args.cc  parse_args.h  random.cc  random.h  shell_utils.h  smooth_data.h  spin_mutex.h  split.h  spsc_queue.h  state_lock.cc  state_lock.h  (+11 more)
src/contract/: CMakeLists.txt  call_parameters.h  contract_alt_bn128_G1_add.cc  contract_alt_bn128_G1_add.h  contract_alt_bn128_G1_mul.cc  contract_alt_bn128_G1_mul.h  contract_alt_bn128_pairing_product.cc  contract_alt_bn128_pairing_product.h  contract_blake2_compression.cc  contract_blake2_compression.h  contract_default_block.cc  contract_default_block.h  contract_ecrecover.cc  contract_ecrecover.h  contract_identity.cc  contract_identity.h  contract_interface.h  contract_manager.cc  contract_manager.h  contract_modexp.cc  contract_modexp.h  contract_pay_for_vpn.cc  contract_pay_for_vpn.h  contract_ripemd160.cc  contract_ripemd160.h  contract_sha256.cc  contract_sha256.h  contract_utils.cc  contract_utils.h  contract_vpn_client_login.cc  contract_vpn_client_login.h  contract_vpn_login.cc  contract_vpn_login.h  (+4 more)
src/contract/tests/: CMakeLists.txt  test_contract_ballot.cc  test_contract_manager.cc
src/contract/tests/contracts/: ballot.js
src/crand/: CMakeLists.txt  consistency_random.cc  consistency_random.h
src/db/: CMakeLists.txt  db.cc  db.h  db_pri_queue.h  db_queue.cc  db_queue.h  db_unique_queue.cc  db_unique_queue.h  db_utils.h  dict.cc  dict.h
src/db/tests/: test_db.cc  test_db_pri_queue.cc  test_dict.cc
src/dbsvr/: CMakeLists.txt  proc_hash.cc  proc_kv.cc  proc_queue.cc  proc_sys.cc  proc_zset.cc  serv.cc  serv.h
src/dbsvr/net/: fde.cc  link.cc  link_redis.src  resp.cc  server.cc  server.h
src/dbsvr/ssdb/: binlog.cc  ssdb.h  ssdb_impl.cc  t_hash.cc  t_kv.cc  ttl.cc  ttl.h
src/dbsvr/util/: app.cc  app.h  ip_filter.h  log.cc  log.h
src/lvpn/: CMakeLists.txt  jconf.cc  jconf.h  local.cc  local.h  lvpn_utils.h  node_manager.cc  node_manager.h
src/root/: CMakeLists.txt  root_dht.cc  root_dht.h  root_init.cc  root_init.h  root_shard_manager.cc  root_shard_manager.h  root_utils.cc  root_utils.h  shard_info.h
src/tcp/tests/: CMakeLists.txt  test_tcp_server.cc
src/timeblock/: CMakeLists.txt  time_block.h  time_block_manager.cc  time_block_manager.h  time_block_utils.h
src/timeblock/tests/: CMakeLists.txt  test_time_block_manager.cc
src/tnet/: CMakeLists.txt  tcp_acceptor.cc  tcp_acceptor.h  tcp_connection.cc  tcp_connection.h  tnet_transport.cc  tnet_transport.h  tnet_utils.h
src/tnet/event/: epoll_manager.cc  epoll_manager.h  event_handler.h  event_loop.cc  event_loop.h  io_event.h
src/tnet/socket/: client_socket.h  listen_socket.cc  listen_socket.h  server_socket.h  socket.cc  socket.h  socket_factory.h  tcp_socket.h
src/tnet/utils/: bytes_buffer.h  cmd_packet.cc  cmd_packet.h  packet.h  packet_decoder.h  packet_encoder.h  packet_factory.h
src/transport/tcp_demo/: CMakeLists.txt  tcp.cc
src/tvm/: CMakeLists.txt  execution.cc  execution.h  tenon_host.cc  tenon_host.h  tvm_utils.h
src/tvm/tests/: CMakeLists.txt  test_execution.cc
(+531 files in other folders)
